# sharrd

./: Cargo.toml  README.md
src/: commands.rs  config.rs  crypto.rs  main.rs  mnemonic.rs  storage.rs
src/shamir/: gf256.rs  mod.rs
src/tests/: cli_test.rs
