[package]
name = "shard"
version = "0.1.0"
edition = "2021"
authors = ["Sabir Khan <simplysabir@gmail.com>"]
description = "A secure seed phrase manager using Shamir's Secret Sharing"
license = "MIT"
repository = "https://github.com/simplysabir/sharrd"
readme = "README.md"
homepage = "https://github.com/simplysabir/sharrd"
keywords = ["shamir", "secret", "sharing", "seed", "phrase", "manager"]


[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Shamir's Secret Sharing and Cryptography
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
anyhow = "1.0"
aes-gcm = "0.10.2"
argon2 = "0.5"
zeroize = { version = "1.5", features = ["derive"] }

# Storage and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
base64 = "0.21"

bincode = "1.3"
chrono = "0.4.41"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
# Optimize for security and performance
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove debug symbols
